# inventory_app

./: .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-wheel  Makefile  Makefile_example  Untitled.ipynb  alembic.ini  async_test.py  compose.nginx.yaml  compose.yaml  http_status_codes.txt  main.py  migration_steps.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_coverage.sh  traefik.toml
.db-env/: dbui.env  pgadmin.env  postgres.env
.env/: postgres.env
.github/workflows/: pre-commit.yaml
inventory_app/: __init__.py  config.py  exception_handlers.py  exceptions.py  logger.py  rate_limiter.py
inventory_app/routes/: __init__.py  divers.py  inventory.py  item.py
inventory_app/schemas/: inventory.py  item.py
inventory_app/services/: inventory.py  item.py
migrations/: env.py
migrations/versions/: 6ff916069f29_initial_migration.py  e197c8d71d43_set_indexes_for_item_id_inventory_id_.py  e5466636118d_set_the_inventory_item_quantity_to_not_.py  fa9f52c0b269_set_item_price_and_inventory_name_to_.py
models/: __init__.py  base.py  inventory.py  inventory_item.py  item.py
sample_requests/: async_requests.py  sync_requests.py
tests/: conftest.py  test_examples.py
tests/integration_tests/: conftest.py  test_item_endpoints.py  test_rate_limit.py
tests/unit_tests/: conftest.py  test_async_requests.py  test_item.py  test_sync_requests.py
