[tool.poetry]
name = "inventory-app"
version = "0.1.0"
description = "A FastAPI api demo"
authors = ["Bassem Karoui <bassem.karoui1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
slowapi = "^0.1.9"
requests = "^2.31.0"
aiohttp = "^3.9.5"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
responses = "^0.25.0"
aioresponses = "^0.7.6"
types-requests = "^2.31.0.20240406"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
